# decisionops-control-tower

./: .dockerignore  .env.example  .gitignore  Dockerfile  KR_DOCS_POLICY.md  README.md  compose.migration.yaml  compose.yaml  pyproject.toml  requirements.txt
docs/: analysis_copilot_architecture.md  architecture_decision_legacy_hospital_migration.md  architecture_decision_rdb_migration.md  case_study.md  data_contract.md  data_flow_diagram.md  demo_package.md  hiring_market_alignment.md  migration_interview_guide.md  modeling_protocol.md  portfolio_release_v2.md  privacy_publication_gate.md  private_demo_runbook.md  rag_chat_architecture.md  reproducibility.md  research_design.md  research_gap_report.md  system_design.md  topic_selection.md
scripts/: capture_demo_screenshots.py  check_docker_ready.py  evaluate_analysis.py  evaluate_data_science.py  evaluate_rag.py  install_docker_daemon_ubuntu.sh  prepare_demo_state.py  refresh_public_demo_inputs.py  run_all.sh  run_migration_case.py  run_migration_rehearsal.py  run_rdb_migration.py  run_server.sh  smoke_api.py  smoke_public_demo.py  verify_compose_deployment.sh  verify_dashboard_ui.py  verify_docker_deployment.sh  verify_private_demo.py  verify_rdb_migration.sh  write_deployment_readiness.py  write_monitoring_snapshot.py
tests/: test_advanced_analytics.py  test_analysis_engine.py  test_analysis_evaluation.py  test_analysis_planner.py  test_app.py  test_chat_ui.py  test_dashboard_ui_contract.py  test_data_analysis.py  test_data_science_api.py  test_data_science_evaluation.py  test_data_science_planner.py  test_deployment_bind.py  test_deployment_readiness.py  test_migration_case.py  test_migration_rehearsal.py  test_monitoring_snapshot.py  test_pipeline.py  test_prediction_engine.py  test_private_demo_verifier.py  test_public_demo_smoke.py  test_rag.py  (+3 more)
(+52 files in other folders)
