[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decisionops-control-tower"
version = "0.2.0"
description = "Evidence-grounded AI operations decision chatbot with guarded RAG and human review."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "scipy",
  "pyarrow",
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]
