[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decisionops-control-tower"
version = "0.3.0"
description = "Validated natural-language tabular analysis, migration reconciliation, guarded RAG, and human review."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "scipy",
  "pyarrow",
  "openpyxl",
  "duckdb",
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
decisionops_control_tower = ["fixtures/*.json"]
